# MainzDigitizer

./: .gitignore   Makefile  README.md  __main__.py  pyproject.toml  pytest.ini  setup.py
.DATA/: test1.xml
src/caenParser/: __init__.py
src/caenParser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/caenParser/domain/: Digitizer.py  DomainController.py  Event.py  Trigger.py  __init__.py
src/caenParser/persistence/: FileParser.py  FileParserRAW.py  FileParserXML.py  PersistenceController.py  __init__.py
src/caenParser/persistence/dtos/: DigitizerDTO.py  SettingsDTO.py
src/caenParser/persistence/scope/: FileParserRAW.py  FileParserXML.py  __init__.py
src/caenParser/persistence/wavedump2/: ParserWBIN.py  __init__.py
src/caenParser/persistence/wavedump2/digitizerModels/: DT5724.py  DT5724Event.py  __init__.py
src/caenParser/persistence/xml/: FileParserXML.py
src/caenParser/utils/: utils.py
src/caenParser/wavedump2/: WaveDump2BinParser.py
src/cpp/: CBinaryIn.cpp  CBinaryIn.h  pybind11_module.cpp
src/domain/: Digitizer.py  DomainController.py  Event.py  Settings.py  Trigger.py
src/persistence/: FileParserXML.py  PersistenceController.py
src/persistence/dtos/: EventDTO.py  TriggerDTO.py  __init__.py
src/utils/: DeepDict.py  __init__.py  utils.py
tests/: conftest.py
tests/.TEST_DATA/: testFileParserXML.xml
tests/persistence/: test_FileParserXML.py
