[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mainz-digitizer"
version = "0.1.0"
description = "Mainz Digitizer Parser"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
]

[project.scripts]
mainz-digitizer = "__main__:main"

[tool.setuptools]
packages = ["domain", "persistence", "utils"]
package-dir = {"" = "src"}