[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caenParser"
version = "0.1.0"
description = "Mainz Digitizer Parser"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    # Standard library dependencies (no need to install):
    # - xml.etree.ElementTree (XML parsing)
    # - typing (type hints)
    # - re (regular expressions)
    # - datetime (date/time handling)
    # - dataclasses (data classes)
    # - enum (enumerations)
    # - tkinter (GUI file dialog - may need system install: sudo apt install python3-tk)
]

[project.scripts]
mainz-digitizer = "__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["caenParser*"]

[tool.setuptools.package-dir]
"" = "src"